--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				var tid = setInterval("shuffleImages()", 30000);
 		});
 		</script>
-		<title>MTG Tourney</title>
+		<title>MTG Tourney - Staging</title>
 	</head>
 	<body>
 		<img id="logo" src="images/logo.png" onClick="shuffleImages()">
